<resources>
    <string name="app_name">p2_rzaman9</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_app_title">American Sign Language Learing Quiz</string>
    <string name="quiz_title_lesson_1">Lesson 1</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="resume_current_attempt">Resume Current Attempt</string>
    <string name="view_records">View Your Quiz Records</string>
    <string name="asl_quiz_records">ASL Quiz Records</string>
    <string name="records_page_desc">This is the list of your quiz attempt scores.\n To delete one of your attempt\'s record, hold down on an item to delete it.</string>
    <string name="delete_all_records">Delete All Records</string>
    <string name="go_to_results">Go to Results</string>
    <string name="return_to_home_screen">Return to Home Screen</string>
    <string name="next_question">Next</string>
    <string name="previous_question">Back</string>
    <string name="submit_quiz">Submit</string>
    <string name="question">Question</string>
    <string name="quiz_complete">Quiz Complete!</string>
    <string name="review_questions">Review Questions</string>
    <string name="score_label">Score:</string>
    <string name="incorrect">(INCORRECT)</string>
    <string name="correct">(CORRECT)</string>
    <string name="no_answer">(Not answered)</string>
    <string name="progress">Progress:</string>
    <string name="settings">Settings</string>
    <string name="settings_title">Settings (Optional Features)</string>
    <string name="_2x_video_speed">2x Video Speed</string>
    <string name="color_coded_scores">Color-Coded Scores</string>
    <string name="shuffle_questions">Shuffle Questions</string>
    <string name="progress_bar">Progress Bar</string>
    <string name="shuffle_note">* NOTE: In-progress quizzes cannot be shuffled/unshuffled!</string>
    <string name="timestamp">Timestamp</string>
    <string name="score">Score</string>
    <string name="attempt">Attempt</string>
    <string name="quiz_title">Quiz Title</string>
    <string name="is_shuffled">Is Shuffled?</string>
    <string name="_2x"><![CDATA[>>2x]]></string>
</resources>