<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/lighter_gray"
    tools:context=".SettingsFragment">

    <TextView android:id="@+id/settingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/settings_title"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/settingsExitButton"
        app:layout_constraintBottom_toBottomOf="@id/settingsExitButton" />

    <CheckBox android:id="@+id/progBarToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/progress_bar"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingsTitle" />

    <CheckBox android:id="@+id/colorScoresToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/color_coded_scores"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progBarToggle" />

    <CheckBox android:id="@+id/videoSpeedToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/_2x_video_speed"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/colorScoresToggle" />

    <CheckBox android:id="@+id/shuffleToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/shuffle_questions"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/videoSpeedToggle" />

    <Button android:id="@+id/settingsExitButton"
        android:layout_width="36dp"
        android:layout_height="40dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20dp"
        android:text="X"
        android:layout_margin="4dp"
        android:padding="2dp"
        android:minWidth="36dp"
        android:minHeight="36dp"
        android:backgroundTint="@color/red_transparent"
        app:cornerRadius="2dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,SpUsage" />

    <TextView android:id="@+id/shuffleNoteText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="italic"
        android:text="@string/shuffle_note"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="@id/shuffleToggle"
        app:layout_constraintEnd_toStartOf="@id/settingsExitButton"
        app:layout_constraintTop_toBottomOf="@id/shuffleToggle" />

</androidx.constraintlayout.widget.ConstraintLayout>