<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView android:id="@+id/appTitleLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/full_app_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"/>

    <TextView android:id="@+id/quizLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="24sp"
        android:textAlignment="center"
        android:text="@string/quiz_title_lesson_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appTitleLabel"/>

    <Button android:id="@+id/startButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textSize="24sp"
        android:text="@string/start_quiz"
        android:onClick="onStartButtonClicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".3"
        tools:ignore="VisualLintButtonSize" />

    <Button android:id="@+id/resumeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textSize="24sp"
        android:text="@string/resume_current_attempt"
        android:onClick="onResumeButtonClicked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startButton"
        tools:ignore="VisualLintButtonSize" />


    <ImageView
        android:src="@drawable/asl_clipart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="48dp"
        app:layout_constraintTop_toBottomOf="@id/resumeButton"
        app:layout_constraintBottom_toTopOf="@id/recordsButton"
        android:importantForAccessibility="no" />



    <Button android:id="@+id/recordsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textSize="24sp"
        android:text="@string/view_records"
        android:onClick="onRecordsButtonClicked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="VisualLintButtonSize" />


</androidx.constraintlayout.widget.ConstraintLayout>